# agora

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  package-lock.json  package.json  railway.json
.github/workflows/: mobile.yml  publish-mobile.yml  release-desktop.yml  web-ci.yml
bridges/claude-cli/: .env.example  README.md  SECURITY.md  bridge.py
bridges/codex-cli/: .env.example  README.md  SECURITY.md  bridge.py
bridges/hermes-plugin/: README.md  __init__.py  adapter.py  plugin.yaml  protocol.py
bridges/hermes-plugin/tests/: smoke_local.py  test_agora_plugin.py
crates/agora-core/: Cargo.toml
crates/agora-core/src/: ai.rs  auth.rs  config.rs  connections.rs  hub.rs  lib.rs  migrate.rs  push.rs  server.rs  sources.rs  store.rs  unfurl.rs  voice.rs
crates/agora-desktop/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
crates/agora-desktop/capabilities/: default.json  remote.json
crates/agora-desktop/icons/: icon.icns
crates/agora-desktop/src/: google_login.rs  main.rs  notify.rs  remote_notify.rs  settings.rs  updater.rs
crates/agora-server/: Cargo.toml
crates/agora-server/src/: main.rs
docs/: ARCHITECTURE.md  AUTH.md  DEPLOYMENT.md  PROTOCOL.md  index.html  privacy.html
mobile/: .gitignore  .npmrc  README.md  app.json  eas.json  jest.integration.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile/.claude/skills/verify/: SKILL.md
mobile/app/: _layout.tsx  connect.tsx  index.tsx
mobile/app/(app)/: _layout.tsx  agents.tsx  index.tsx  search.tsx  settings.tsx  threads.tsx  unreads.tsx
mobile/app/(app)/channel/: [id].tsx
mobile/app/(app)/live/: [channelId].tsx
mobile/app/(app)/members/: [groupId].tsx
mobile/app/(app)/thread/[channelId]/: [rootId].tsx
mobile/plugins/: withNoPushEntitlement.js
mobile/src/api/: client.ts  keys.ts  queries.ts  types.ts  voice.ts
mobile/src/components/: AgentAvatar.tsx  ArmedButton.tsx  Attachments.tsx  Composer.tsx  EmojiPicker.tsx  Icon.tsx  LiveRows.tsx  MdText.tsx  Mermaid.tsx  MessageForm.tsx  MessageItem.tsx  ProfileSheet.tsx  Reactions.tsx  Sources.tsx  Toast.tsx  Unfurls.tsx
mobile/src/lib/: agentBus.ts  appVersion.ts  appleAuth.ts  authConfig.ts  background.ts  format.ts  googleAuth.ts  headerItems.tsx  keyboard.ts  mdlite.ts  nativeSpeech.ts  notifications.ts  openLink.ts  speech.ts  theme.ts  unread.ts  vad.ts
mobile/src/state/: addressed.ts  live.ts  prefs.ts  servers.ts  session.ts
mobile/src/ws/: reducer.ts  useAgoraSocket.ts
mobile/tests/: appVersion.test.ts  authConfig.test.ts  client.test.ts  emoji.test.ts  format.test.ts  googleAuth.test.ts  integration.test.ts  mdlite.test.ts  mdtext.test.ts  messageitem.test.ts  nativeSpeech.test.ts  reducer.test.ts  servers.test.ts  session.test.ts  sources.test.ts  unread.test.ts  vad.test.ts  webEmojiPicker.test.ts
mobile/tests/mocks/: webview.js
scripts/: agora_migrate.py  gen-emoji.js  migrate_from_pantheo.py  redeploy.sh
ui/: agora.js  connect.html  connections.js  emoji.js  icons.js  index.html  shim.js  style.css  users.js
ui/app2/: index.html
ui/app2/assets/: index-BAWLkaOm.js  index-BLZrCHBt.js  index-DUc2YhS6.js  index-DXCQ-sp6.js  index-Dg_nIes6.js  index-DqeSJAEh.js  index-Dwru3FQ_.js
ui/vanilla/: index.html
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/e2e/: parity.mjs
web/src/: App.tsx  main.tsx  styles.css
web/src/components/: AgentProfileCard.tsx  AgoraLayout.tsx  Attachments.tsx  AuthGate.tsx  ChannelPane.tsx  Composer.tsx  ConnectionsPane.tsx  EmojiPicker.tsx  GroupOverview.tsx  MdText.tsx  MembersPanel.tsx  MessageFormView.tsx  MessageItem.tsx  MessageLog.tsx  MessageOptions.tsx  PeoplePane.tsx  Reactions.tsx  SearchPane.tsx  Sidebar.tsx  SourcesViewer.tsx  ThreadPane.tsx  ThreadsInbox.tsx  Topbar.tsx  Unfurls.tsx  VoiceControls.tsx
web/src/hooks/: useAgoraSocket.ts  useToggleReactionById.ts
web/src/lib/: auth.ts  autoGrow.ts  files.ts  icons.tsx  mentions.ts  mermaid.ts  toast.tsx  voice.ts
web/src/state/: confirm.ts  jump.ts  liveVoice.ts  speak.ts  ui.ts  voiceRec.ts
