[workspace]
resolver = "2"
members = ["crates/agora-core", "crates/agora-server", "crates/agora-desktop"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart", "macros"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
tar = "0.4"
flate2 = "1"
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
# tungstenite pulls rustls with default-features=off (no crypto provider), which
# panics at runtime on any wss:// dial. Enabling `ring` here fixes it via feature
# unification.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rand = "0.8"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
