[package]
name = "agora-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tokio-tungstenite.workspace = true
rustls.workspace = true
rand.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
tar.workspace = true
flate2.workspace = true
ureq.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures-util.workspace = true

[dev-dependencies]
tempfile = "3"
