[package]
name = "agora-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agora-core = { path = "../agora-core" }
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
# Direct-download auto-updates (GitHub Releases feed). Mac App Store builds
# must ship without this — updates flow through the store there — so it sits
# behind the default-on `updater` feature (MAS: --no-default-features).
# The dialog plugin drives the interactive "Check for Updates…" prompts.
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ureq.workspace = true
tokio-tungstenite.workspace = true
rustls.workspace = true
futures-util.workspace = true

[features]
default = ["updater"]
updater = ["dep:tauri-plugin-updater", "dep:tauri-plugin-dialog"]

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-user-notifications = "0.3.2"
